# cloth_simulation_webgpu

./: .gitignore  IK_TEST_SUMMARY.md  README.md  TESTING_SUMMARY.md  WEBGPU_TEST_INTEGRATION.md  electron.vite.config.ts  eslint.config.js  launcher.js  package-lock.json  package.json  run-webgpu-tests.sh  test_electron.js  test_electron2.js  test_ik.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
assets/samples/avatars/: index.json
assets/samples/cubemaps/: README.md
assets/samples/motions/: index.json
assets/samples/patterns/: hood.json  index.json  scarf.json  tank.json  tshirt.json
docs/: ORBIT_SPEC.md  PBR_analysis.md  architecture.md  i18n.md
electron/main/: electron-loader.js  index.ts
electron/preload/: index.ts
native/: CMakeLists.txt  Makefile  README.md  constraint_builder.cpp
smpl/: debug_pickle.py  export_pose_data.py  export_shape_blend_shapes.py  extract_smpl_data.py  extract_smpl_direct.py  extract_smpl_minimal.py  generate_shape_presets.py
smpl/smpl_webuser/hello_world/: export_neutral_mannequin.py
src/renderer/: i18n.ts  index.html  main.ts  vite-env.d.ts
src/renderer/collision/: body.ts  bodyCollide.ts  collide.wgsl  (+2 more)
tests/: BUG_REPORT.md  COVERAGE_REPORT.md  IBL_TEST_COVERAGE.md  WEBGPU_TESTS.md  cloth.test.ts  fabrik.test.ts  fabrikAdvanced.test.ts  gpuSkinning.browser.test.ts  gpuSkinning.test.ts.old  ibl-complete.test.ts  ibl.browser.test.ts  ibl.test.ts  matrix.test.ts  params.test.ts  quaternion.test.ts  setup.ts  skeleton.test.ts  skeletonAdvanced.test.ts  testUtils.ts  vectorMath.test.ts  webgpu-browser-test.html
(+56 files in other folders)
